# codex-qq-bridge

./: .env.example  .gitignore  LICENSE  README.md  codex-conversation-monitor.py  codex-qq-bridge.py  codex-qq-bridge.py.bak_20260630192947  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md
evidence/: README.md
src/codex_qq_bridge/: __init__.py  __main__.py  bridge.py
src/codex_qq_bridge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
